--- a/personal-hotspot/css/style.css
+++ b/personal-hotspot/css/style.css
@@ -944,7 +944,7 @@ header a.logo img {
     top: 50px;
     height: 2px;
     /* width will be set using JavaScript */
-    background: #3c4142;
+    background: #8c8f8f; /* #3c4142 */
     -webkit-transition: -webkit-transform 0.4s;
     -moz-transition: -moz-transform 0.4s;
     transition: transform 0.4s;
@@ -1000,8 +1000,8 @@ header a.logo img {
     height: 12px;
     width: 12px;
     border-radius: 50%;
-    border: 2px solid #dfdfdf;
-    background-color: #f8f8f8;
+    border: 2px solid #bcbaba; /* #dfdfdf */
+    background-color: #f8f8f8; 
     -webkit-transition: background-color 0.3s, border-color 0.3s;
     -moz-transition: background-color 0.3s, border-color 0.3s;
     transition: background-color 0.3s, border-color 0.3s;
@@ -1042,7 +1042,7 @@ header a.logo img {
     height: 34px;
     width: 34px;
     border-radius: 50%;
-    border: 2px solid #3c4142;
+    border: 2px solid #8c8f8f; /* #3c4142 */
     /* replace text with an icon */
     overflow: hidden;
     color: transparent;
@@ -1062,7 +1062,7 @@ header a.logo img {
     -webkit-transform: translateX(-50%) translateY(-50%);
     -ms-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
-    background: url(../images/cd-arrow.svg) no-repeat 0 0;
+    background: url(../images/cd-arrow-orange.svg) no-repeat 0 0;
 }
 .cd-timeline-navigation a.prev {
     left: 0;
